# effective-python

./: 404.html  CNAME  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
chpt_1/item_0/: index.html
chpt_1/item_1/: index.html
chpt_1/item_2/: index.html
docs/: index.md  index.zh_TW.md
docs/chpt_1/: item_0.md  item_0.zh_TW.md  item_1.md  item_2.md
search/: search_index.json
zh/: index.html
zh/chpt_1/item_0/: index.html
zh/chpt_1/item_1/: index.html
zh/chpt_1/item_2/: index.html
zh_TW/: index.html
zh_TW/chpt_1/item_0/: index.html
zh_TW/chpt_1/item_1/: index.html
zh_TW/chpt_1/item_2/: index.html
