[tool.poetry]
name = "effective-python"
version = "1.0.0"
description = "Reading notes on Effective Python 2nd Edition"
authors = ["Satoshi Jek <jks15satoshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
